errores vengan a mi
yupi yupi

--- a/Tarea2BD.csproj
+++ b/Tarea2BD.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Models\MP.cs" />
     <Compile Include="Models\Topics.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ViewComments.cs" />
     <Compile Include="Models\ViewTemas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -272,7 +273,6 @@
     <Content Include="Views\Juegos\LOL.aspx" />
     <Content Include="Views\Home\Categorias.aspx" />
     <Content Include="Views\Home\MiPerfil.aspx" />
-    <Content Include="Views\Home\Tema.aspx" />
     <Content Include="Views\Home\UserIn.aspx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Home\Registracion.aspx" />
