--- a/Tarea2BD.csproj
+++ b/Tarea2BD.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.SqlServer.ManagedConnections, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Microsoft.VisualC" />
     <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <Private>True</Private>
     </Reference>
@@ -265,9 +266,11 @@
     <Content Include="Views\Categorias\GeneralTop.aspx" />
     <Content Include="Views\Categorias\NuevaCategoria.aspx" />
     <Content Include="Views\Categorias\NuevoTopic.aspx" />
+    <Content Include="Views\Home\EditarPerfil.aspx" />
     <Content Include="Views\Home\Inbox.aspx" />
     <Content Include="Views\Home\Login.aspx" />
     <Content Include="Views\Home\MP.aspx" />
+    <Content Include="Views\Home\ResponderMP.aspx" />
     <Content Include="Views\Home\VerMP.aspx" />
     <Content Include="Views\Home\VerPerfil.aspx" />
     <Content Include="Views\Home\Categorias.aspx" />
